Loading Now Playing (Perfect)

--- a/ViperMoviesssDB/ViperMoviesssDB/MovieHomeScreen/view/xibs/NowPlayingCollectionViewCell.xib
+++ b/ViperMoviesssDB/ViperMoviesssDB/MovieHomeScreen/view/xibs/NowPlayingCollectionViewCell.xib
@@ -21,6 +21,12 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="keym7MPn1icW1wWfzMnW3HeuzWU" translatesAutoresizingMaskIntoConstraints="NO" id="SD4-9G-hK1">
                         <rect key="frame" x="0.0" y="0.0" width="152" height="229"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBound" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fast &amp; Furious Hobbs &amp; Shawn" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JEW-Yl-nsA">
                         <rect key="frame" x="0.0" y="239" width="152" height="17"/>
