--- a/ViperMoviesssDB/ViperMoviesssDB/MovieDetailsScreen/view/xibs/MovieDetailsHeader.xib
+++ b/ViperMoviesssDB/ViperMoviesssDB/MovieDetailsScreen/view/xibs/MovieDetailsHeader.xib
@@ -17,16 +17,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qL5-8F-yZ0">
-                    <rect key="frame" x="15" y="0.0" width="311" height="194"/>
+                    <rect key="frame" x="0.0" y="0.0" width="326" height="194"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="keym7MPn1icW1wWfzMnW3HeuzWU" translatesAutoresizingMaskIntoConstraints="NO" id="0c8-pM-JGu">
-                            <rect key="frame" x="0.0" y="0.0" width="113" height="194"/>
+                            <rect key="frame" x="0.0" y="10" width="152" height="174"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="152" id="Ou6-ra-0mS"/>
+                            </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="DML-sB-1RJ">
-                            <rect key="frame" x="123" y="96.5" width="188" height="70.5"/>
+                            <rect key="frame" x="152" y="88.5" width="159" height="70.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fast &amp; Furious" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cek-Ep-6va">
-                                    <rect key="frame" x="0.0" y="0.0" width="188" height="24"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="159" height="24"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="24" id="lfJ-uC-GpS"/>
                                     </constraints>
@@ -35,10 +38,10 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="1y1-K8-XkT">
-                                    <rect key="frame" x="0.0" y="29" width="188" height="20"/>
+                                    <rect key="frame" x="0.0" y="29" width="159" height="20"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading genres... " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G9d-Zc-NMD">
-                                            <rect key="frame" x="0.0" y="0.0" width="170" height="20"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="141" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="Vj0-vb-FW3"/>
                                             </constraints>
@@ -47,7 +50,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="5g2-wp-EkH">
-                                            <rect key="frame" x="170" y="0.0" width="18" height="20"/>
+                                            <rect key="frame" x="141" y="0.0" width="18" height="20"/>
                                         </activityIndicatorView>
                                     </subviews>
                                     <constraints>
@@ -55,7 +58,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Zc-bH-DmU">
-                                    <rect key="frame" x="0.0" y="54" width="188" height="16.5"/>
+                                    <rect key="frame" x="0.0" y="54" width="159" height="16.5"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star Icon" translatesAutoresizingMaskIntoConstraints="NO" id="vQM-i1-6Ed">
                                             <rect key="frame" x="0.0" y="0.0" width="13" height="16.5"/>
@@ -64,7 +67,7 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dI-YV-pZQ">
-                                            <rect key="frame" x="13" y="0.0" width="175" height="16.5"/>
+                                            <rect key="frame" x="13" y="0.0" width="146" height="16.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -79,13 +82,12 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="0c8-pM-JGu" secondAttribute="bottom" id="2Xr-AT-EjA"/>
-                        <constraint firstAttribute="bottom" secondItem="DML-sB-1RJ" secondAttribute="bottom" constant="27" id="9my-LL-uaF"/>
-                        <constraint firstAttribute="trailing" secondItem="DML-sB-1RJ" secondAttribute="trailing" id="Elr-vR-a24"/>
-                        <constraint firstItem="0c8-pM-JGu" firstAttribute="leading" secondItem="qL5-8F-yZ0" secondAttribute="leading" id="VmX-lE-P9U"/>
-                        <constraint firstAttribute="trailing" secondItem="0c8-pM-JGu" secondAttribute="trailing" constant="198" id="aDx-Oe-qkO"/>
-                        <constraint firstItem="DML-sB-1RJ" firstAttribute="leading" secondItem="0c8-pM-JGu" secondAttribute="trailing" constant="10" id="fm5-Xp-nxf"/>
-                        <constraint firstItem="0c8-pM-JGu" firstAttribute="top" secondItem="qL5-8F-yZ0" secondAttribute="top" id="mRJ-f0-nS0"/>
+                        <constraint firstAttribute="trailing" secondItem="DML-sB-1RJ" secondAttribute="trailing" constant="15" id="HFh-2e-jFE"/>
+                        <constraint firstItem="DML-sB-1RJ" firstAttribute="leading" secondItem="0c8-pM-JGu" secondAttribute="trailing" id="JUZ-n8-r9a"/>
+                        <constraint firstAttribute="bottom" secondItem="0c8-pM-JGu" secondAttribute="bottom" constant="10" id="WeN-WI-nfp"/>
+                        <constraint firstAttribute="bottom" secondItem="DML-sB-1RJ" secondAttribute="bottom" constant="35" id="Wjf-Yt-yhj"/>
+                        <constraint firstItem="0c8-pM-JGu" firstAttribute="top" secondItem="qL5-8F-yZ0" secondAttribute="top" constant="10" id="aMo-Em-eed"/>
+                        <constraint firstItem="0c8-pM-JGu" firstAttribute="leading" secondItem="qL5-8F-yZ0" secondAttribute="leading" id="dL5-qi-Ldh"/>
                     </constraints>
                 </view>
             </subviews>
@@ -95,7 +97,7 @@
                 <constraint firstAttribute="bottom" secondItem="qL5-8F-yZ0" secondAttribute="bottom" id="Rlj-pO-diJ"/>
                 <constraint firstItem="qL5-8F-yZ0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="f31-kI-hFo"/>
                 <constraint firstItem="qL5-8F-yZ0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fAT-6e-fC0"/>
-                <constraint firstItem="qL5-8F-yZ0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="15" id="n4D-4e-F5v"/>
+                <constraint firstItem="qL5-8F-yZ0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="n4D-4e-F5v"/>
                 <constraint firstItem="qL5-8F-yZ0" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="n90-n9-d9Y"/>
                 <constraint firstAttribute="bottom" secondItem="qL5-8F-yZ0" secondAttribute="bottom" id="tzp-od-73f"/>
             </constraints>
