--- a/ViperMoviesssDB/ViperMoviesssDB/MovieHomeScreen/view/xibs/NowPlayingCollectionViewCell.xib
+++ b/ViperMoviesssDB/ViperMoviesssDB/MovieHomeScreen/view/xibs/NowPlayingCollectionViewCell.xib
@@ -34,33 +34,34 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="Star Icon" translatesAutoresizingMaskIntoConstraints="NO" id="H9f-DS-FL8">
-                        <rect key="frame" x="0.0" y="262" width="13" height="13"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="13" id="IlE-Zv-T6g"/>
-                            <constraint firstAttribute="width" constant="13" id="JNd-yf-lfW"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxH-0e-1Ki">
-                        <rect key="frame" x="17" y="262" width="22" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Eiu-df-CaZ">
+                        <rect key="frame" x="0.0" y="262" width="35" height="13"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="Star Icon" translatesAutoresizingMaskIntoConstraints="NO" id="H9f-DS-FL8">
+                                <rect key="frame" x="0.0" y="0.0" width="13" height="13"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="13" id="IlE-Zv-T6g"/>
+                                    <constraint firstAttribute="width" constant="13" id="JNd-yf-lfW"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxH-0e-1Ki">
+                                <rect key="frame" x="17" y="0.0" width="18" height="13"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
             </view>
             <constraints>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="JEW-Yl-nsA" secondAttribute="trailing" id="1Ir-he-76A"/>
                 <constraint firstItem="JEW-Yl-nsA" firstAttribute="top" secondItem="SD4-9G-hK1" secondAttribute="bottom" constant="10" id="1XN-1g-ELo"/>
-                <constraint firstItem="FxH-0e-1Ki" firstAttribute="leading" secondItem="H9f-DS-FL8" secondAttribute="trailing" constant="4" id="3JD-Js-bpt"/>
                 <constraint firstItem="JEW-Yl-nsA" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" id="B9Q-Ew-kY6"/>
-                <constraint firstItem="H9f-DS-FL8" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" id="C96-BT-JTl"/>
-                <constraint firstItem="FxH-0e-1Ki" firstAttribute="top" secondItem="JEW-Yl-nsA" secondAttribute="bottom" constant="6" id="Yh3-la-lcK"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="FxH-0e-1Ki" secondAttribute="trailing" constant="113" id="dti-1b-12Q"/>
                 <constraint firstItem="SD4-9G-hK1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="gk6-tH-wBO"/>
                 <constraint firstAttribute="bottom" secondItem="SD4-9G-hK1" secondAttribute="bottom" constant="79" id="lTM-CD-5Av"/>
                 <constraint firstItem="SD4-9G-hK1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="rKA-9W-MKA"/>
-                <constraint firstItem="H9f-DS-FL8" firstAttribute="top" secondItem="JEW-Yl-nsA" secondAttribute="bottom" constant="6" id="sAX-YT-3pG"/>
                 <constraint firstAttribute="trailing" secondItem="SD4-9G-hK1" secondAttribute="trailing" id="yFq-TY-m04"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
