Showing movie details

--- a/ViperMoviesssDB/ViperMoviesssDB/MovieDetailsScreen/view/xibs/MovieDetailsHeader.xib
+++ b/ViperMoviesssDB/ViperMoviesssDB/MovieDetailsScreen/view/xibs/MovieDetailsHeader.xib
@@ -24,6 +24,12 @@
                             <constraints>
                                 <constraint firstAttribute="width" constant="152" id="Ou6-ra-0mS"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="10"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBound" value="YES"/>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="DML-sB-1RJ">
                             <rect key="frame" x="152" y="88.5" width="159" height="70.5"/>
